fix overflow

--- a/app/globals.css
+++ b/app/globals.css
@@ -122,6 +122,10 @@
   * {
     @apply border-border outline-ring/50;
   }
+  html, body {
+    @apply overflow-x-clip;
+    
+  }
   body {
     @apply bg-background text-foreground;
   }
